# ParalelleEnFinance

./: AUTHORS  CMakeLists.txt  README
doc/: CMakeLists.txt  doxy.rc
src/: Asian.cpp  Asian.hpp  Basket.cpp  Basket.hpp  BlackScholesModel.cpp  BlackScholesModel.hpp  CMakeLists.txt  FakeRnd.cpp  FakeRnd.hpp  HedgePortfolio.cpp  HedgePortfolio.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.hpp  Performance.cpp  Performance.hpp  PnlRand.cpp  PnlRand.hpp  RandomGen.hpp  pricer.cpp
test/: CMakeLists.txt  test_BlackScholesModel.cpp  test_asian.cpp  test_basket.cpp  test_basket_1.cpp  test_basket_2.cpp  test_basket_MPI.cpp  test_basket_MPI_Precision.cpp  test_hedgePortfolio.cpp  test_hedgePortfolio_call.cpp  test_mem_asset_t.cpp  test_mem_asset_t0.cpp  test_mem_asset_ti.cpp  test_mem_delta_t.cpp  test_mem_delta_ti.cpp  test_mem_price_t.cpp  test_mem_price_t0.cpp  test_mem_price_ti.cpp  test_mem_shift.cpp  test_performance.cpp  test_soutenance_call.cpp  test_unit_asset_t.cpp  test_unit_asset_t0.cpp  test_unit_asset_ti.cpp  test_unit_concatenationMatrice.cpp  test_unit_deltas.cpp  test_unit_shift.cpp
